Fixed spacing, added footer, added titles, added descriptions for activity levles

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@ h1 {
     margin-bottom: 10px;
 }
 
+h2, h3 {
+    text-align: center;
+}
+
+
 nav {
     text-align: center;
 }
@@ -161,6 +166,14 @@ form input[type="submit"]:hover {
     height: 50vh; /* Full height of the viewport */
 }
 
+.textareas-titles {
+    display: flex;
+    flex-direction: row; /* Arrange items side by side */
+    align-items: stretch; /* Stretch items to equal height */
+    /* height: 50vh; Full height of the viewport */
+    justify-content: space-evenly;
+}
+
 #clangBangCode {
     width: calc(50% - 20px); /* Set textarea width to half of container width minus some padding */
     margin: 10px; /* Add some margin for spacing between textareas */
@@ -181,7 +194,7 @@ form input[type="submit"]:hover {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #000; /* Darker background */
+    background-color: #000000; /* Darker background */
     color: #00ff00; /* Green text color */
     font-family: 'Roboto Mono', monospace;
     font-size: 14px;
@@ -200,4 +213,19 @@ iframe {
     width: 100vw;
     height: 100vh; /* Cover the entire viewport */
     border: none;
+}
+
+footer{
+    border: 4px solid #4ec4f7; /* Light blue border resembling futuristic tech */
+    border-radius: 8px; /* Rounded corners */
+}
+
+.container{
+    display: flex;
+
+}
+
+.container > *{
+    margin-left: 25px;
+    margin-right: 25px;
 }
